--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt -t package/
 
       - name: Zip the code
@@ -37,4 +38,4 @@ jobs:
 
       - name: Upload to AWS Lambda
         run: |
-          aws lambda update-function-code --function-name get-oil-prices --zip-file fileb://function.zip
+          aws lambda update-function-code --function-name get-oil-prices --zip-file fileb://deployment.zip
