--- a/python-scraper/requirements.txt
+++ b/python-scraper/requirements.txt
@@ -1,14 +1,9 @@
-beautifulsoup4==4.12.2
-boto3==1.26.146
-botocore==1.29.146
-bs4==0.0.1
-certifi==2023.5.7
-charset-normalizer==3.1.0
-idna==3.4
-jmespath==1.0.1
-python-dateutil==2.8.2
-requests==2.31.0
-s3transfer==0.6.1
-six==1.16.0
-soupsieve==2.4.1
-urllib3==1.26.16
+beautifulsoup4==4.14.0
+bs4==0.0.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+idna==3.10
+requests==2.32.5
+soupsieve==2.8
+typing_extensions==4.15.0
+urllib3==2.5.0
