--- a/.github/workflows/build-sqlitedb.yml
+++ b/.github/workflows/build-sqlitedb.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Save Docker image as tar
         run: |
-          docker save sqlitedb:latest -o image.tar
+          docker save oil-tracker:latest -o image.tar
 
-      - name: Upload Docker iamge as artifact
+      - name: Upload Docker image as artifact
         uses: actions/upload-artifact@v4
         with:
           name: docker-image
