--- a/.github/workflows/build-scraper.yml
+++ b/.github/workflows/build-scraper.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build Docker image
         run: |
           cd ./python-scraper
-          docker build -t oil-tracker-scraper:latest .
+          docker build -t tmp:latest .
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -37,6 +37,7 @@ jobs:
 
       - name: Push Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository }}/oil-tracker-scraper:latest
-          docker tag oil-tracker-scraper:latest $IMAGE_NAME
+          OWNER_REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME=ghcr.io/$OWNER_REPO/oil-tracker-scraper:latest
+          docker tag tmp:latest $IMAGE_NAME
           docker push $IMAGE_NAME
